polishing the module

--- a/_doc/notebooks/azure_blob_storage.ipynb
+++ b/_doc/notebooks/azure_blob_storage.ipynb
@@ -102,9 +102,19 @@
       "metadata": {},
       "outputs": [
         {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "The pyensae extension is already loaded. To reload it, use:\n",
+            "  %reload_ext pyensae\n",
+            "The pyenbc extension is already loaded. To reload it, use:\n",
+            "  %reload_ext pyenbc\n"
+          ]
+        },
+        {
           "data": {
             "text/plain": [
-              "'1.1'"
+              "'1.2'"
             ]
           },
           "execution_count": 5,
@@ -115,6 +125,7 @@
       "source": [
         "import pyensae\n",
         "%load_ext pyensae\n",
+        "%load_ext pyenbc\n",
         "pyensae.__version__"
       ]
     },
