--- a/_doc/notebooks/example_of_ssh_client_communication.ipynb
+++ b/_doc/notebooks/example_of_ssh_client_communication.ipynb
@@ -17,7 +17,8 @@
       },
       "outputs": [],
       "source": [
-        "%load_ext pyensae"
+        "%load_ext pyensae\n",
+        "%load_ext pyenbc"
       ]
     },
     {
