--- a/_doc/notebooks/python_hadoop_pig.ipynb
+++ b/_doc/notebooks/python_hadoop_pig.ipynb
@@ -28,6 +28,7 @@
       "source": [
         "import pyensae\n",
         "%load_ext pyensae\n",
+        "%load_ext pyenbc\n",
         "pyensae.download_data(\"ConfLongDemo_JSI.txt\", website=\"https://archive.ics.uci.edu/ml/machine-learning-databases/00196/\")"
       ]
     },
