rename file_helper into filehelper, pyensae into pyenbc

--- a/_doc/notebooks/azure_blob_storage.ipynb
+++ b/_doc/notebooks/azure_blob_storage.ipynb
@@ -6,7 +6,7 @@
       "source": [
         "# File Manipulation with Azure Blob Storage\n",
         "\n",
-        "We try a few file manipulation between a local computer and a blob storage on Azure. It requires [azure-sdk-for-python](https://github.com/Azure/azure-sdk-for-python) and [pyensae](http://www.xavierdupre.fr/app/pyensae/helpsphinx/index.html). We first create a dummy file."
+        "We try a few file manipulation between a local computer and a blob storage on Azure. It requires [azure-sdk-for-python](https://github.com/Azure/azure-sdk-for-python) and [pyenbc](http://www.xavierdupre.fr/app/pyenbc/helpsphinx/index.html). We first create a dummy file."
       ]
     },
     {
@@ -93,7 +93,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "We need pyensae >= 1.1:"
+        "We need pyensae >= 1.2:"
       ]
     },
     {
@@ -124,9 +124,10 @@
       ],
       "source": [
         "import pyensae\n",
+        "import pyenbc\n",
         "%load_ext pyensae\n",
         "%load_ext pyenbc\n",
-        "pyensae.__version__"
+        "pyensae.__version__, pyenbc.__version__"
       ]
     },
     {
@@ -173,7 +174,7 @@
         {
           "data": {
             "text/plain": [
-              "(<pyensae.remote.azure_connection.AzureClient at 0xa4a2a20>,\n",
+              "(<pyenbc.remote.azure_connection.AzureClient at 0xa4a2a20>,\n",
               " <azure.storage.blob.blobservice.BlobService at 0xa4a2b00>)"
             ]
           },
@@ -382,7 +383,7 @@
         {
           "data": {
             "text/plain": [
-              "'testpyensae/randomxy.txt'"
+              "'testpyenbc/randomxy.txt'"
             ]
           },
           "execution_count": 12,
@@ -391,7 +392,7 @@
         }
       ],
       "source": [
-        "%blob_up randomxy.txt clusterensaeazure1/testpyensae/randomxy.txt"
+        "%blob_up randomxy.txt clusterensaeazure1/testpyenbc/randomxy.txt"
       ]
     },
     {
@@ -424,7 +425,7 @@
               "  <tbody>\n",
               "    <tr>\n",
               "      <th>0</th>\n",
-              "      <td>testpyensae/randomxy.txt</td>\n",
+              "      <td>testpyenbc/randomxy.txt</td>\n",
               "      <td>Sat, 26 Sep 2015 22:05:12 GMT</td>\n",
               "      <td>application/octet-stream</td>\n",
               "      <td>43483</td>\n",
@@ -432,7 +433,7 @@
               "    </tr>\n",
               "    <tr>\n",
               "      <th>1</th>\n",
-              "      <td>testpyensae/randomxy2.txt</td>\n",
+              "      <td>testpyenbc/randomxy2.txt</td>\n",
               "      <td>Sat, 26 Sep 2015 21:50:55 GMT</td>\n",
               "      <td>application/octet-stream</td>\n",
               "      <td>43456</td>\n",
@@ -444,8 +445,8 @@
             ],
             "text/plain": [
               "                        name                  last_modified  \\\n",
-              "0   testpyensae/randomxy.txt  Sat, 26 Sep 2015 22:05:12 GMT   \n",
-              "1  testpyensae/randomxy2.txt  Sat, 26 Sep 2015 21:50:55 GMT   \n",
+              "0   testpyenbc/randomxy.txt  Sat, 26 Sep 2015 22:05:12 GMT   \n",
+              "1  testpyenbc/randomxy2.txt  Sat, 26 Sep 2015 21:50:55 GMT   \n",
               "\n",
               "               content_type  content_length  blob_type  \n",
               "0  application/octet-stream           43483  BlockBlob  \n",
@@ -458,7 +459,7 @@
         }
       ],
       "source": [
-        "%blob_ls clusterensaeazure1/testpyensae"
+        "%blob_ls clusterensaeazure1/testpyenbc"
       ]
     },
     {
@@ -523,7 +524,7 @@
               "      <td></td>\n",
               "      <td>available</td>\n",
               "      <td>unlocked</td>\n",
-              "      <td>testpyensae/randomxy.txt</td>\n",
+              "      <td>testpyenbc/randomxy.txt</td>\n",
               "      <td></td>\n",
               "      <td>0</td>\n",
               "    </tr>\n",
@@ -546,7 +547,7 @@
               "      <td></td>\n",
               "      <td>available</td>\n",
               "      <td>unlocked</td>\n",
-              "      <td>testpyensae/randomxy2.txt</td>\n",
+              "      <td>testpyenbc/randomxy2.txt</td>\n",
               "      <td></td>\n",
               "      <td>0</td>\n",
               "    </tr>\n",
@@ -572,8 +573,8 @@
               "1  Sat, 26 Sep 2015 21:50:55 GMT                  available     unlocked   \n",
               "\n",
               "                        name url  xms_blob_sequence_number  \n",
-              "0   testpyensae/randomxy.txt                             0  \n",
-              "1  testpyensae/randomxy2.txt                             0  "
+              "0   testpyenbc/randomxy.txt                             0  \n",
+              "1  testpyenbc/randomxy2.txt                             0  "
             ]
           },
           "execution_count": 14,
@@ -582,7 +583,7 @@
         }
       ],
       "source": [
-        "%blob_lsl clusterensaeazure1/testpyensae"
+        "%blob_lsl clusterensaeazure1/testpyenbc"
       ]
     },
     {
@@ -606,7 +607,7 @@
         }
       ],
       "source": [
-        "l=bs.get_block_list(\"clusterensaeazure1\", \"testpyensae/randomxy.txt\")\n",
+        "l=bs.get_block_list(\"clusterensaeazure1\", \"testpyenbc/randomxy.txt\")\n",
         "for _ in l.committed_blocks:\n",
         "    print(\"size=\",_.size, \"id=\",_.id)"
       ]
@@ -635,7 +636,7 @@
         }
       ],
       "source": [
-        "%blob_down clusterensaeazure1/testpyensae/randomxy.txt randomxx_copy.txt --overwrite"
+        "%blob_down clusterensaeazure1/testpyenbc/randomxy.txt randomxx_copy.txt --overwrite"
       ]
     },
     {
@@ -714,7 +715,7 @@
         {
           "data": {
             "text/plain": [
-              "'testpyensae/randomxy2.txt'"
+              "'testpyenbc/randomxy2.txt'"
             ]
           },
           "execution_count": 18,
@@ -723,7 +724,7 @@
         }
       ],
       "source": [
-        "%blob_up randomxy.txt clusterensaeazure1/testpyensae/randomxy2.txt"
+        "%blob_up randomxy.txt clusterensaeazure1/testpyenbc/randomxy2.txt"
       ]
     },
     {
@@ -749,7 +750,7 @@
               "  <tbody>\n",
               "    <tr>\n",
               "      <th>0</th>\n",
-              "      <td>testpyensae/randomxy.txt</td>\n",
+              "      <td>testpyenbc/randomxy.txt</td>\n",
               "      <td>Sat, 26 Sep 2015 22:05:12 GMT</td>\n",
               "      <td>application/octet-stream</td>\n",
               "      <td>43483</td>\n",
@@ -757,7 +758,7 @@
               "    </tr>\n",
               "    <tr>\n",
               "      <th>1</th>\n",
-              "      <td>testpyensae/randomxy2.txt</td>\n",
+              "      <td>testpyenbc/randomxy2.txt</td>\n",
               "      <td>Sat, 26 Sep 2015 22:05:18 GMT</td>\n",
               "      <td>application/octet-stream</td>\n",
               "      <td>43483</td>\n",
@@ -769,8 +770,8 @@
             ],
             "text/plain": [
               "                        name                  last_modified  \\\n",
-              "0   testpyensae/randomxy.txt  Sat, 26 Sep 2015 22:05:12 GMT   \n",
-              "1  testpyensae/randomxy2.txt  Sat, 26 Sep 2015 22:05:18 GMT   \n",
+              "0   testpyenbc/randomxy.txt  Sat, 26 Sep 2015 22:05:12 GMT   \n",
+              "1  testpyenbc/randomxy2.txt  Sat, 26 Sep 2015 22:05:18 GMT   \n",
               "\n",
               "               content_type  content_length  blob_type  \n",
               "0  application/octet-stream           43483  BlockBlob  \n",
@@ -783,7 +784,7 @@
         }
       ],
       "source": [
-        "%blob_ls clusterensaeazure1/testpyensae"
+        "%blob_ls clusterensaeazure1/testpyenbc"
       ]
     },
     {
@@ -810,7 +811,7 @@
         }
       ],
       "source": [
-        "%blob_downmerge clusterensaeazure1/testpyensae randomall.txt --overwrite"
+        "%blob_downmerge clusterensaeazure1/testpyenbc randomall.txt --overwrite"
       ]
     },
     {
@@ -905,8 +906,8 @@
         }
       ],
       "source": [
-        "%blob_delete clusterensaeazure1/testpyensae/randomxy.txt\n",
-        "%blob_delete clusterensaeazure1/testpyensae/randomxy2.txt"
+        "%blob_delete clusterensaeazure1/testpyenbc/randomxy.txt\n",
+        "%blob_delete clusterensaeazure1/testpyenbc/randomxy2.txt"
       ]
     },
     {
@@ -950,7 +951,7 @@
         }
       ],
       "source": [
-        "%blob_ls clusterensaeazure1/testpyensae/"
+        "%blob_ls clusterensaeazure1/testpyenbc/"
       ]
     },
     {
