--- a/_doc/notebooks/example_of_ssh_client_communication.ipynb
+++ b/_doc/notebooks/example_of_ssh_client_communication.ipynb
@@ -81,7 +81,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "We are going to use the following magic commands [MagicRemote](http://www.xavierdupre.fr/app/pyensae/helpsphinx/pyensae/remote/magic_remote.html#pyensae.remote.magic_remote.MagicRemote):"
+        "We are going to use the following magic commands [MagicRemote](http://www.xavierdupre.fr/app/pyenbc/helpsphinx/pyenbc/remote/magic_remote.html#pyenbc.remote.magic_remote.MagicRemote):"
       ]
     },
     {
@@ -95,7 +95,7 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Help on class ASSHClient in module pyensae.remote.ssh_remote_connection:\n",
+            "Help on class ASSHClient in module pyenbc.remote.ssh_remote_connection:\n",
             "\n",
             "class ASSHClient(builtins.object)\n",
             " |  A simple class to access to remote machine through SSH.\n",
@@ -362,7 +362,7 @@
         {
           "data": {
             "text/plain": [
-              "<pyensae.remote.ssh_remote_connection.ASSHClient at 0xa854fd0>"
+              "<pyenbc.remote.ssh_remote_connection.ASSHClient at 0xa854fd0>"
             ]
           },
           "execution_count": 6,
